# ChangeLog for app-emacs/emacs-common-gentoo
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Dec 2011; Ulrich Mueller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild:
  Sync from Portage tree.

  13 Dec 2011; Ulrich Mueller <ulm@gentoo.org> -emacs-common-gentoo-1.3.ebuild,
  emacs-common-gentoo-9999.ebuild:
  Moved to Portage tree. Update wording of elog message.

  06 Dec 2011; Ulrich Mueller <ulm@gentoo.org> emacs-common-gentoo-1.3.ebuild,
  emacs-common-gentoo-9999.ebuild:
  Get rid of all echo commands because they aren't logged.

*emacs-common-gentoo-1.3 (06 Dec 2011)

  06 Dec 2011; Ulrich Mueller <ulm@gentoo.org> +emacs-common-gentoo-1.3.ebuild:
  Version bump. The Emacs site-start.el file has moved to /etc/emacs/.

  31 Jan 2011; Ulrich Mueller <ulm@gentoo.org>
  -emacs-common-gentoo-1.2-r2.ebuild, emacs-common-gentoo-9999.ebuild:
  Moved to portage tree. Sync live ebuild.

  02 Jan 2011; Ulrich Mueller <ulm@gentoo.org>
  emacs-common-gentoo-1.2-r2.ebuild:
  Copied from -r1 in portage tree. Update for EAPI 4.

  01 Dec 2009; Ulrich Mueller <ulm@gentoo.org>
  emacs-common-gentoo-9999.ebuild:
  Regenerate site-gentoo file in pkg_config, too.

  08 Aug 2009; Ulrich Mueller <ulm@gentoo.org>
  emacs-common-gentoo-9999.ebuild, metadata.xml:
  Emacs 23 style icons are default now.

  16 Apr 2009; Ulrich Mueller <ulm@gentoo.org> metadata.xml,
  emacs-common-gentoo-9999.ebuild:
  Rename USE flag to "emacs23icons".

*emacs-common-gentoo-9999 (12 Apr 2009)

  12 Apr 2009; Ulrich Mueller <ulm@gentoo.org> -files/site-start.el,
  -emacs-common-gentoo-1.0-r20.ebuild +emacs-common-gentoo-9999.ebuild:
  Live CVS ebuild; LICENSE is GPL-3 now. Remove old.

*emacs-common-gentoo-1.0-r20 (29 Mar 2009)

  29 Mar 2009; Ulrich Mueller <ulm@gentoo.org> +files/site-start.el,
  -emacs-common-gentoo-1.0.ebuild, +emacs-common-gentoo-1.0-r20.ebuild:
  Sync from Portage tree. Try a different approach using CONFIG_PROTECT.
