@@ -1,13 +1,45 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD emacs-common-gentoo-9999.ebuild 2987 RMD160 a82a4c52073113f0fab58ebc4fcd0ecf9bcf7d71 SHA1 221b60e8ae90f13b690772e818ad10c8d83fb7a3 SHA256 f29dbc7dc9bb194d6e3571e3f7072eebd0b719e61f68788dea495b16730a59ec
-MISC ChangeLog 2399 RMD160 89f56c04c82c1df4286f71cf3a97b7f30df35fd2 SHA1 066a0e572f51a0027774f841a138280c441468bd SHA256 34b7dbcd93c970300d28d9ca59971cfaf3aa8011d033ef4e2890b80d46ba4b96
+- -----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+DIST emacs-common-gentoo-1.3.tar.gz 46819 RMD160 40c12dd355c3fd80ad65d45190c4f3c7f2134ad6 SHA1 ff743a4646d493dd14ed1e812d3adfd6323498e9 SHA256 c874088b1d9833432e1da9c3e3f79e7891cb3af41bcdecb02aa299d207c0218d
+EBUILD emacs-common-gentoo-1.3.ebuild 3810 RMD160 8cfb1b36273ade85de27055a388c53b2e774c087 SHA1 e3f3fde4e1cbea077ff6137adf144736910a0eb4 SHA256 7644f4f8db65abc1ecad8ba480f84266d166f87ed151056d746ae31df075a709
+EBUILD emacs-common-gentoo-9999.ebuild 3760 RMD160 fa440f4f453048b1ae1a1a9f139b441e597aaade SHA1 aae9209f44511495fdb2786ed2e7c9e02a022d17 SHA256 f9480723304dc0128c7a261a58b6e98aa1ea6f8ebb719096631d9110786c442f
+MISC ChangeLog 2587 RMD160 beeb4291bb7107a54e89bdc2f84bf2eeeaa0da66 SHA1 539d7a7937fdad674cefe36f3073bb78e384da4b SHA256 011a4665089f72f6c58cde64e2d821d91b065b31c0dcd78de984e910d0050681
 MISC metadata.xml 235 RMD160 94ec7acf062c24ce7a5c9b98fff11c2a68baf269 SHA1 c948e0bb625876a97f14834fe5848367dda93628 SHA256 81f928a2ff996d91f098bc1d718adec61bbb6afa1f8e5f1b29f0931a73902ec1
+- -----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iQIcBAEBAgAGBQJPJILlAAoJEDxpGckxwJCB83sQAJiJVdyJbdpLmp/PXTY0pPqR
+qob3P+/u3umR5zdWQyXyZfSOjQq6FivAe2A79VAZvVikCg7zH1AohbPpl81VmvGu
+KZuEElELJH+V0zCuTVtNGZCPSJYtZpeT2jz5PYa77mxY/T0qttDv70cuqG6a3RYV
+/UKQnrFxk5mTnDLbxNAtk453N2+z5ozWDhrGvmsmLfaQQMc9T/Dfr+u07iMdbuhi
+E7ckkcDcEE4ipbSHX9LeNynNwdZ56mZXfTLl9OLgzLQhcNyIhL8ywsfQoMrzqPZ8
+QRG85Wv3FZ5RWqjamPb5eC1l3RVZF2ng52hmwYC1Om7ukClj2kHwFEKVZAp5ieyA
+MAzrRZ6Lpt1dFdjLhjXop0MVPEBdY/mQAWgW3Vq76oUwr+J7kWetKorxM058stYK
+wSCNxNEwGAtu481ZTZbBicAMICOL3bo22UrbMsyI8/k7xIKVwQTA60NyJLs+g6ZZ
+/ddIF5887iXVbaskmrKdj1tu/lZwrzcopgBO7H1rfw5SlhtYbH2+LtfddV78YMYj
+G/5m0lrqmy7M45yLSS5mB5gajsLWU762Eo+9VAN6T1IUnKQXYvzDxgtnSqK4GLoO
+YlqAxEZdSfMJQUs0dVlyLkT0fGibs1JEBIMshr56U5kP4UanoJ/YJsK7GFKtVkcP
+b5wIuL6SOQAQrTen9s+u
+=j4Ek
+- -----END PGP SIGNATURE-----
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk7poxkACgkQOeoy/oIi7uwnbQCfeM7mctwqgDA4Y02esFa786OH
-NjwAn3M3FcgjzOl+adhByG/o2Jb5v0pw
-=lc/L
+iQIcBAEBAgAGBQJPJIMnAAoJEDxpGckxwJCBIwQQALh0x0pb0HKROufncdLRZA/c
+4mTVEYDVmty7bQ+RXkWDmQZhEhbQBaROXga219FqKXzqJuo2RTgwhspGQ/GGgQtA
+H3FQm40Q0IjK657/IVAY8v/MZOBs2Ve+yp44UwqsVshY934vmV6rKB3KReaXBpsT
+Z8wb44GChtSjTYKYGPUHNoYbIz5d0bDBq32SDyM+nmc3KRId2HberuypxNI4a3il
+3Ag3KP3qr8bvundd8oE9ef3UxKAy7Wwo6dyNNnPnhEOgZPk/A/PmrTqOHDYKzQew
+iQpvwFuSIeNXQvkqF1WNwqZmkpXf1Nav1KVfXB0W2MHiO/UZ414Tef00iXgsakpI
+Z1rcsl7bhh4wpHC5nowRHt2rPhV+eKWDed1qZv8kvaPoO/KLza75fpbZoPSI9fJA
+ZmVTlJarWPVppAUtdycmhB0c9+mw+nZHVSe8qB0m45ZsEs/thxZM+VwA7zhNe/X4
+xmTMr7b5v/rkGHKpCg1uVTBKmG3mpkRrdGsUOuFhwb1BTA+BakywHA0jYH9kgrxf
+IQA8Al37ODP//s/T3m4rhJFw8igwWEqQWYdXwCQphpSh2q8sx8qOnEH5yuM+8dG7
+fWBYbDJAoy6GwA4pn72WkneyyY5b7HHADhZS6+fp88kyMjn0byzURpsNjHqbc1VB
+OXsj3ZgC3JJxf6JGeqjV
+=3Tzw
 -----END PGP SIGNATURE-----
