@@ -1,6 +1,10 @@
 # ChangeLog for app-emacs/emacs-common-gentoo
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  28 Jan 2012; Ulrich Müller <ulm@gentoo.org> +emacs-common-gentoo-1.3.ebuild,
+  emacs-common-gentoo-9999.ebuild:
+  Remove old site-start.el file if it hasn't been modified by the user.
 
   15 Dec 2011; Ulrich Mueller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild:
   Sync from Portage tree.
